--- a/files/basic-html/page10.html
+++ b/files/basic-html/page10.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 10 - Demo</div>
+        <div id="content-top1">Page 10 - Ramsey School Distrct</div>
         <div id="content-top2">P. 10</div>
      </div>
      <div id="content-middle">
@@ -150,31 +150,31 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>10 Ramsey School District Strategic Plan
-Goal Area 3 Intended Outcomes:
-1. Decrease incidents of Harassment, Intimidation, and Bullying
-2. Increase staff awareness of and ability to maintain a safe and secure environment for
-each school.
-3. Increase score on the community survey question, “My child feels safe at school.”
-4. Increase the number of staff members certified in Mental Health First Aid.
-5. Earn No Place for Hate designation at Smith Middle School.
-6. Increase score on the community survey question, “The staff at my child’s school creates
-a school environment that helps them learn.”
-7. Increase score on the community survey question, “My child has a sense of belonging at
-their school.”
-8. Increase percentage of subgroups in AP courses.
-9. Increase the number of Multilingual Learners meeting the WIDA ACCESS growth goal.
-10. Maintain and Increase SEPAC partnership.
-11. Increase the percentage of students attending school regularly.
-12. Reduce the disproportionality of Hispanic students classified as communication impaired.
-13. Increase score on the community survey question, “My child enjoys going to their school.”
-Goal Area 3
+    <pre style="white-space:pre-line"><code>Goal Area 3
 LEARNING
 ENVIRONMENT
 Foster a safe, supportive and inclusive
 educational environment where every
 student is embraced, recognized, and
 appreciated for their individuality.
+Goal Area 3 Intended Outcomes:
+1. 2. Decrease incidents of Harassment, Intimidation, and Bullying
+Increase staff awareness of and ability to maintain a safe and secure environment for
+each school.
+3. 4. 5. 6. Increase score on the community survey question, “My child feels safe at school.”
+Increase the number of staff members certified in Mental Health First Aid.
+Earn No Place for Hate designation at Smith Middle School.
+Increase score on the community survey question, “The staff at my child’s school creates
+a school environment that helps them learn.”
+7. Increase score on the community survey question, “My child has a sense of belonging at
+their school.”
+8. 9. Increase percentage of subgroups in AP courses.
+Increase the number of Multilingual Learners meeting the WIDA ACCESS growth goal.
+10. Maintain and Increase SEPAC partnership.
+11. Increase the percentage of students attending school regularly.
+12. Reduce the disproportionality of Hispanic students classified as communication impaired.
+13. Increase score on the community survey question, “My child enjoys going to their school.”
+10 Ramsey School District Strategic Plan
 
 
 
