--- a/files/basic-html/page11.html
+++ b/files/basic-html/page11.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 11 - Demo</div>
+        <div id="content-top1">Page 11 - Ramsey School Distrct</div>
         <div id="content-top2">P. 11</div>
      </div>
      <div id="content-middle">
@@ -150,7 +150,7 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>Ramsey School District Strategic Plan 11
+    <pre style="white-space:pre-line"><code>•
 3.1 Safety and Security:
 Provide all members of the school community with
 the training and resources to ensure a safe and
@@ -163,7 +163,6 @@ proper training for all staff members.
 Upgrade the video surveillance VMS system
 and repair, move and replace cameras where
 needed.
-•
 Publish staff handbook for crisis procedures for
 during school hours and after school hours.
 3.2 Mental Health and Well-Being:
@@ -173,9 +172,9 @@ mental health and well-being.
 •
 Utilize depression screenings to proactively
 address student mental health concerns.
-•
 Incorporate mental health and well-being into
 the MTSS process.
+•
 3.3 Culture of Inclusion and Belonging:
 Honor, leverage, and capitalize on the strengths
 and perspectives of each Ramsey individual and
@@ -203,15 +202,12 @@ students can learn, grow, and thrive.
 Foster inclusive classroom and improve student
 outcomes through the use of the co-teaching
 model.
-•
 Create a more inclusive and supportive
 environment for our multilingual learners to
 support growth.
-•
 Train staff to understand and implement
 culturally responsive and inclusive classroom
 practices.
-•
 Implement targeted interventions and support
 systems.
 3.5 The Ramsey Experience:
@@ -224,12 +220,16 @@ school community.
 •
 Implement and continue to develop the full-day
 preschool program.
-•
 Expand and improve the Rising Rams Program.
-•
 Develop formal peer leadership programs
 at Dater School, Smith Middle School, and
 Ramsey High School.
+•
+•
+•
+•
+•
+Ramsey School District Strategic Plan 11
 
 
 
