--- a/files/basic-html/page13.html
+++ b/files/basic-html/page13.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 13 - Demo</div>
+        <div id="content-top1">Page 13 - Ramsey School Distrct</div>
         <div id="content-top2">P. 13</div>
      </div>
      <div id="content-middle">
@@ -150,8 +150,7 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>Ramsey School District Strategic Plan 13
-4.1 Recruitment and Retainment of Staff:
+    <pre style="white-space:pre-line"><code>4.1 Recruitment and Retainment of Staff:
 Develop strategies and processes for the
 recruitment, retention and growth of top-tier talent.
 4.1 Strategies
@@ -182,6 +181,16 @@ dedication and diligence of our staff members.
 •
 Ensure teachers benefit from meaningful
 evaluations for continuous improvement.
+4.2 Professional Learning:
+Continuously provide research-based and
+customized professional learning opportunities.
+4.2 Strategies
+•
+Create District, school, and department
+professional learning plans.
+•
+Implement a choice-based professional
+learning day.
 4.3 Financial Stewardship:
 Utilize and optimize financial resources
 transparently to achieve student learning objectives
@@ -222,29 +231,20 @@ Grant Program Leverage state, county and
 vendor sponsored training and certification
 opportunities for members of the Technology
 Department.
-•
 As part of our cybersecurity plan, evaluate,
 purchase and implement an email security
 platform that can be rolled out to all staff and
 students.
-•
 Implement a more comprehensive network
 monitoring software that will provide the
 Technology Department and our managed
-services vendor with a single pain of glass view
-of our network infrastructure and will provide
-mapping, configuration backups and alerts if
-and where there are issues.
-4.2 Professional Learning:
-Continuously provide research-based and
-customized professional learning opportunities.
-4.2 Strategies
+services vendor with a single pane of glass
+view of our network infrastructure and will
+provide mapping, configuration backups and
+alerts if and where there are issues.
 •
-Create District, school, and department
-professional learning plans.
 •
-Implement a choice-based professional
-learning day.
+Ramsey School District Strategic Plan 13
 
 
 
