--- a/files/basic-html/page14.html
+++ b/files/basic-html/page14.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 14 - Demo</div>
+        <div id="content-top1">Page 14 - Ramsey School Distrct</div>
         <div id="content-top2">P. 14</div>
      </div>
      <div id="content-middle">
@@ -150,27 +150,7 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>14 Ramsey School District Strategic Plan
-Goal Area 5 Intended Outcomes:
-1. Increase score on the parent survey question on overall rating of satisfaction with
-communication from the district.
-2. Increase score on the staff survey question on overall rating of satisfaction with communication
-from the district.
-3. Increase score on the parent survey question, “I know where and how I can direct a question,
-complain, or concern.”
-4. Increase score on the parent survey question about how informed they feel about student
-successes and achievement.
-5. Increase score on the parent survey question about how informed they feel about district
-successes and achievement.
-6. Increase score on the parent survey question about how informed they feel about district goals
-and plans.
-7. Increase score on the parent survey question about communication being open and transparent.
-8. Increase score on the parent survey question, “I know where and how I can direct a question,
-complain, or concern.”
-9. Launch Ramsey Alumni Group
-10. Increase the number of community partnerships for the betterment of students’ experiences
-and district programs.
-Goal Area 5
+    <pre style="white-space:pre-line"><code>Goal Area 5
 COMMUNITY
 ENGAGEMENT
 Create initiatives that continue to develop strong
@@ -178,6 +158,26 @@ partnerships between families, schools, and the
 broader community to actively enhance students’
 learning and development through a collaborative
 support network.
+1. 2. 3. Goal Area 5 Intended Outcomes:
+Increase score on the parent survey question on overall rating of satisfaction with
+communication from the district.
+Increase score on the staff survey question on overall rating of satisfaction with communication
+from the district.
+Increase score on the parent survey question, “I know where and how I can direct a question,
+complain, or concern.”
+4. Increase score on the parent survey question about how informed they feel about student
+successes and achievement.
+Increase score on the parent survey question about how informed they feel about district
+successes and achievement.
+Increase score on the parent survey question about how informed they feel about district goals
+and plans.
+Increase score on the parent survey question about communication being open and transparent.
+Increase score on the parent survey question, “I know where and how I can direct a question,
+complain, or concern.”
+9. Launch Ramsey Alumni Group
+10. Increase the number of community partnerships for the betterment of students’ experiences
+and district programs.
+5. 6. 7. 8. 14 Ramsey School District Strategic Plan
 
 
 
