--- a/files/basic-html/page4.html
+++ b/files/basic-html/page4.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 4 - Demo</div>
+        <div id="content-top1">Page 4 - Ramsey School Distrct</div>
         <div id="content-top2">P. 4</div>
      </div>
      <div id="content-middle">
@@ -150,10 +150,18 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>4 Ramsey School District Strategic Plan
-PROFILE OF
+    <pre style="white-space:pre-line"><code>PROFILE OF
 A RAMSEY
 GRADUATE*
+Habits
+of Mind
+Interpersonal
+Skills
+Personal
+Attributes
+The 4C’s
+Content
+Mastery
 1. Content Mastery
 A baseline understanding of knowledge in
 HUMANITIES, WELLNESS, THE ARTS,
@@ -172,15 +180,6 @@ others towards achieving a common goal.
 CREATIVITY: Generate ideas, learn from
 mistakes, and elaborate and refine ideas
 to maximize value.
-Habits
-of Mind
-Interpersonal
-Skills
-Personal
-Attributes
-The 4C’s
-Content
-Mastery
 3. Personal Attributes
 RESPONSIBILITY: Make good choices that
 reflect integrity and accountable behavior in an
@@ -200,6 +199,7 @@ REFLECTION: Reflect on their own learning and
 experiences; think about their own thinking.
 *  The Profile of a Ramsey Graduate (Profile) outlines the skills and competencies we expect all students to have developed and
 demonstrated by graduation, after 13 years of targeted education.
+4 Ramsey School District Strategic Plan
 
 
 
