--- a/files/basic-html/page7.html
+++ b/files/basic-html/page7.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 7 - Demo</div>
+        <div id="content-top1">Page 7 - Ramsey School Distrct</div>
         <div id="content-top2">P. 7</div>
      </div>
      <div id="content-middle">
@@ -150,8 +150,7 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>Ramsey School District Strategic Plan 7
-1.1 Profile of a Ramsey Graduate:
+    <pre style="white-space:pre-line"><code>1.1 Profile of a Ramsey Graduate:
 Continue to implement developmentally appropriate
 experiences throughout students’ Preschool-12
 journey that foster the academic and cognitive
@@ -242,6 +241,7 @@ curricular assessment data.
 •
 Pilot a numeracy screener at the elementary
 level.
+Ramsey School District Strategic Plan 7
 
 
 
