--- a/files/basic-html/page9.html
+++ b/files/basic-html/page9.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 9 - Demo</div>
+        <div id="content-top1">Page 9 - Ramsey School Distrct</div>
         <div id="content-top2">P. 9</div>
      </div>
      <div id="content-middle">
@@ -150,7 +150,7 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>Ramsey School District Strategic Plan 9
+    <pre style="white-space:pre-line"><code>•
 2.1 Profile of a Ramsey Graduate:
 Instill the key intrapersonal and interpersonal skills
 from the Profile in both classroom instruction and
@@ -160,7 +160,6 @@ related programming.
 Develop a catalog of classroom lessons aligned
 with these Profile skills to be delivered by
 school counselors or teachers.
-•
 Provide professional learning for infusing
 competency instruction into everyday teaching.
 2.2 Extracurricular Activities:
@@ -189,12 +188,10 @@ three elementary schools.
 Build staff capacity at Smith Middle School to
 implement RULER infused SEL lessons on a
 consistent basis in future school years.
-•
 Implement SILAS for SEL and executive
 functioning to target student needs at three
 elementary schools and at Smith Middle
 School.
-•
 Enhance the use Robin for SEL in grades 9-12.
 2.4 Citizenship:
 Build a culture of positive and responsible
@@ -208,6 +205,8 @@ education program in grades Preschool-5.
 •
 Develop a civic action research capstone
 project for Grade 11 Social Studies.
+•
+•
 2.5 Use of Technology:
 Ensure students create and maintain a healthy
 relationship with technology, promoting responsible
@@ -222,6 +221,7 @@ to teaching digital citizenship.
 •
 Implement the first version of the District AI
 Implementation Plan.
+Ramsey School District Strategic Plan 9
 
 
 
