--- a/files/basic-html/page3.html
+++ b/files/basic-html/page3.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 3 - Demo</div>
+        <div id="content-top1">Page 3 - Ramsey School Distrct</div>
         <div id="content-top2">P. 3</div>
      </div>
      <div id="content-middle">
@@ -150,7 +150,19 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>Ramsey School District Strategic Plan 3
+    <pre style="white-space:pre-line"><code>Mission Statement
+Ramsey School District inspires students to maximize
+their potential, striving to be better tomorrow than they
+were yesterday.
+Vision Statement
+We envision an inclusive school community that recognizes
+each student’s unique strengths. We aim to be a place
+where every student feels a sense of belonging and has
+the opportunity to pursue their passions and reach their
+full potential. We strive to develop well-rounded individuals
+who are responsible, resilient, and ready to become active
+citizens in their local, national, and global communities.
+Key Concepts
 Strengths First:
 We celebrate the unique
 strengths of each student
@@ -158,15 +170,6 @@ and staff member. By focusing on
 strengths, we aim to create a community
 where every individual feels welcome,
 valued, and respected.
-Key Concepts
-Continuous Improvement:
-While respecting our rich tradition,
-we also believe in the continuous
-growth and development of students,
-staff, and the community. By embracing
-new ideas and approaches, we prepare
-students to navigate and succeed in a
-rapidly changing world.
 Rich Tradition:
 We honor the rich tradition that
 has shaped our school district since
@@ -182,18 +185,15 @@ stronger together. We value the power
 of teamwork and encourage students,
 educators, and families to work together
 to achieve common goals.
-Mission Statement
-Ramsey School District inspires students to maximize
-their potential, striving to be better tomorrow than they
-were yesterday.
-Vision Statement
-We envision an inclusive school community that recognizes
-each student’s unique strengths. We aim to be a place
-where every student feels a sense of belonging and has
-the opportunity to pursue their passions and reach their
-full potential. We strive to develop well-rounded individuals
-who are responsible, resilient, and ready to become active
-citizens in their local, national, and global communities.
+Continuous Improvement:
+While respecting our rich tradition,
+we also believe in the continuous
+growth and development of students,
+staff, and the community. By embracing
+new ideas and approaches, we prepare
+students to navigate and succeed in a
+rapidly changing world.
+Ramsey School District Strategic Plan 3
 
 
 
