--- a/files/basic-html/page5.html
+++ b/files/basic-html/page5.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="description" content="Demo">
+        <meta name="description" content="Ramsey School Distrct">
         <meta name="keywords" content="">
-        <title>Demo</title>
+        <title>Ramsey School Distrct</title>
 <style type="text/css">
 <!--
 body {
@@ -139,7 +139,7 @@ function MM_swapImage() { //v3.0
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 5 - Demo</div>
+        <div id="content-top1">Page 5 - Ramsey School Distrct</div>
         <div id="content-top2">P. 5</div>
      </div>
      <div id="content-middle">
@@ -150,8 +150,7 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>Ramsey School District Strategic Plan 5
-ROADMAP TO 2029
+    <pre style="white-space:pre-line"><code>ROADMAP TO 2029
 STRATEGIC GOAL AREAS:
 Goal 1:
 ACADEMICS 
@@ -172,6 +171,7 @@ Goal 5:
 COMMUNITY
 ENGAGEMENT
 
+Ramsey School District Strategic Plan 5
 
 
 
